Updated hardcoded URL to resolve CORS error.